<resources>
    <string name="app_name">Bandabilidad</string>
    <string name="musicos">Músicos</string>
    <string name="actuaciones">Actuaciones</string>
    <string name="faltas">Faltas</string>
    <string name="title_activity_musicos">MusicosActivity</string>
    <string name="nuevo">Nuevo</string>
    <string name="borrar">Borrar</string>
    <string name="nuevoMusico">Nuevo músico</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="numero">Número</string>
    <string name="orden">Orden</string>
    <string name="guardar">Guardar</string>
    <string name="dialog_borrar_message">Se borrará el músico seleccionado</string>
    <string name="dialog_borrar_title">Borrar músico</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="actuacion">Actuación</string>
    <string name="ciudad">Ciudad</string>
    <string name="fechaHora">Fecha/Hora</string>
    <string name="tarde">Tarde</string>
    <string name="anotar">Anotar</string>
</resources>
